css/jquery.terminal-src.css
/* ... */
/* UNDERLINE ANIMATION */
@-webkit-keyframes terminal-underline {
  0%, 50% {
      border-left: none;
      border-bottom-color: #aaa;
      border-bottom-color: var(--color, #aaa);
  }
  50.1%, 100% {
      border-left: none;
      border-bottom-color: #000;
      border-bottom-color: var(--background, #000);
  }
}
@-moz-keyframes terminal-underline {
  0%, 50% {
      border-left: none;
      border-bottom-color: #aaa;
      border-bottom-color: var(--color, #aaa);
  }
  50.1%, 100% {
      border-left: none;
      border-bottom-color: #000;
      border-bottom-color: var(--background, #000);
  }
}
@keyframes terminal-underline {
  0%, 50% {
      border-bottom-color: #aaa;
      border-bottom-color: var(--color, #aaa);
  }
  50.1%, 100% {
      border-bottom-color: #000;
      border-bottom-color: var(--background, #000);
  }
}
.underline-animation .cursor.blink span span {
    /* margin-top: 2px; */
    border-left: none;
    /* margin-left: 0; */
    margin-right: -1px;
    -webkit-animation-name: terminal-underline;
    -moz-animation-name: terminal-underline;
    -ms-animation-name: terminal-underline;
    animation-name: terminal-underline;
    right: 1px;
}
.glow-animation .cursor.blink span span {
    border: none;
    margin: 0;
    padding: 0;
    -webkit-animation-name: terminal-glow;
    -moz-animation-name: terminal-glow;
    -ms-animation-name: terminal-glow;
    animation-name: terminal-glow;
}
.bar-animation .cursor.blink span span {
    -webkit-animation-name: terminal-bar;
       -moz-animation-name: terminal-bar;
        -ms-animation-name: terminal-bar;
            animation-name: terminal-bar;
}
/*
   Internet Explorer & Edge *, Safari ≤ 6
   source: https://w3reign.com/internet-explorer-edge-css-hacks/
*/


@supports (-ms-ime-align:auto) {
    .cmd .clipboard {
        margin-left: -9999px;
    }
    @keyframes terminal-blink {
        0%, 50% {
            background-color: var(--original-color, #aaa);
            color: var(--background, #000);
        }
        50.1%, 100% {
            background-color: var(--background, #000);
            color: var(--original-color, #aaa);
        }
    }
    @keyframes terminal-bar {
        0%, 50% {
            border-left-color: var(--color, #aaa);
        }
        50.1%, 100% {
            border-left-color: var(--background, #000);
        }
    }
    @keyframes terminal-underline {
        0%, 50% {
            border-bottom-color: var(--color, #aaa);
            line-height: 12px;
            line-height: calc(var(--size, 1) * 12px);
        }
        50.1%, 100% {
            border-bottom-color: var(--background, #000);
            line-height: 12px;
            line-height: calc(var(--size, 1) * 12px);
        }
    }
}
/* IE hack Edge one don't work in IE11 */
@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
    .cmd .clipboard {
        margin-left: -9999px;
    }
    .underline-animation .cursor.blink span span {
        margin-top: 1px;
    }
    @-ms-keyframes terminal-blink {
        0%, 50% {
            background-color: #aaa;
            color: #000;
        }
        50.1%, 100% {
            background-color: #000;
            color: #aaa;
        }
    }
}
.terminal h1::-moz-selection,
.terminal h2::-moz-selection,
.terminal h3::-moz-selection,
.terminal h4::-moz-selection,
.terminal h5::-moz-selection,
.terminal h6::-moz-selection,
.terminal pre::-moz-selection,
.terminal td::-moz-selection,
.terminal .terminal-output div div::-moz-selection,
.terminal .terminal-output div span::-moz-selection,
.terminal .terminal-output div div a::-moz-selection,
.terminal .terminal-output .raw div::-moz-selection,
.cmd div::-moz-selection,
.cmd > span::-moz-selection,
.cmd > span span::-moz-selection,
.cmd > div::-moz-selection,
.cmd > div span::-moz-selection,
.cmd .prompt span::-moz-selection {
    background-color: #aaa;
    color: #000;
}
/* this don't work in Chrome
.terminal tr td::-moz-selection {
    border-color: #000;
}
.terminal tr td::selection {
    border-color: #000;
}
*/
.terminal h1::selection,
.terminal h2::selection,
.terminal h3::selection,
.terminal h4::selection,
.terminal h5::selection,
.terminal h6::selection,
.terminal pre::selection,
.terminal td::selection,
.terminal .terminal-output div div::selection,
.terminal .terminal-output div div a::selection,
.terminal .terminal-output div span::selection,
.terminal .terminal-output .raw div::selection,
.cmd div::selection,
.cmd > span::selection,
.cmd > span span::selection,
.cmd > div::selection,
.cmd > div span::selection,
.cmd .prompt span::selection {
    /*
     * use rgba to fix transparent selection in chrome
     * http://stackoverflow.com/questions/7224445/css3-selection-behaves-differently-in-ff-chrome
     */
    background-color: rgba(170, 170, 170, 0.99);
    color: #000;
}

.terminal .terminal-output > :not(.raw) .error,
.terminal .terminal-output > :not(.raw) .error * {
    color: red;
    color: var(--error-color, red);
}
.tilda {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1100;
}
.ui-dialog-content .terminal {
    width: 100%;
    height: 100%;
    box-sizing: border-box;
}
.ui-dialog .ui-dialog-content.dterm {
    padding: 0;
}
.clear {
    clear: both;
}
.terminal .terminal-output > :not(.raw) a[href] {
    color: #0F60FF;
    color: var(--link-color, #0F60FF);
    cursor: pointer;
}
.terminal .terminal-output > :not(.raw) a[href]:hover {
    background-color: #0F60FF;
    background-color: var(--link-color, #0F60FF);
    color: var(--background, #000);
    text-decoration: none;
}
.terminal .terminal-fill {
    position: absolute;
    left: 0;
    top: -100%;
    width: 100%;
    height: 100%;
    margin: 1px 0 0;
    border: none;
    opacity: 0.01;
    pointer-events: none;
    box-sizing: border-box;
}
.terminal, .terminal .terminal-fill {
    padding: 10px;
}
/* ... */

